//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  username String [unique, not null]
  password String [not null]
  name String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  roleId String [not null]
  role Role [not null]
  refreshToken String [unique]
  sales Sale [not null]
}

Table Role {
  id String [pk]
  name String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  users User [not null]
  permissions Permission [not null]
}

Table Permission {
  id String [pk]
  name String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  roles Role [not null]
}

Table Customer {
  id String [pk]
  name String [not null]
  phone String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  active Boolean [not null, default: true]
  sales Sale [not null]
  Group Group
  groupId String
  memberRole MemberRole [not null, default: 'ANGGOTA']
}

Table Group {
  id String [pk]
  name String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  members Customer [not null]
}

Table Sale {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  customer Customer
  customerId String
  total Float [not null]
  cash Float
  change Float
  products ProductSale [not null]
  user User [not null]
  userId String [not null]
  paymentMethod PaymentMethod [not null, default: 'TUNAI']
  status SaleStatus [not null, default: 'SELESAI']
  dueDate DateTime
}

Table Product {
  id String [pk]
  name String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  categoryId String [not null]
  category Category [not null]
  stock Int [not null]
  price Float [not null]
  active Boolean [not null, default: true]
  sales ProductSale [not null]
  purchases PurchaseItem [not null]
  barcode String [unique]
}

Table ProductSale {
  saleId String [not null]
  sale Sale [not null]
  productId String [not null]
  product Product [not null]
  quantity Int [not null]
  total Float [not null]

  indexes {
    (saleId, productId) [pk]
  }
}

Table Category {
  id String [pk]
  name String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  products Product [not null]
}

Table Supplier {
  id String [pk]
  name String [unique, not null]
  address String
  phone String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  active Boolean [not null, default: true]
  purchases Purchase [not null]
}

Table Purchase {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  total Float [not null]
  supplierId String [not null]
  supplier Supplier [not null]
  products PurchaseItem [not null]
}

Table PurchaseItem {
  productId String [not null]
  product Product [not null]
  purchaseId String [not null]
  Purchase Purchase [not null]
  quantity Int [not null]
  purchasePrice Float [not null]
  total Float [not null]

  indexes {
    (purchaseId, productId) [pk]
  }
}

Table PermissionToRole {
  permissionsId String [ref: > Permission.id]
  rolesId String [ref: > Role.id]
}

Enum MemberRole {
  ANGGOTA
  KETUA
}

Enum SaleStatus {
  SELESAI
  PROSES
  BATAL
}

Enum PaymentMethod {
  TUNAI
  KREDIT
}

Ref: User.roleId > Role.id

Ref: Customer.groupId > Group.id

Ref: Sale.customerId > Customer.id

Ref: Sale.userId > User.id

Ref: Product.categoryId > Category.id

Ref: ProductSale.saleId > Sale.id

Ref: ProductSale.productId > Product.id

Ref: Purchase.supplierId > Supplier.id

Ref: PurchaseItem.productId > Product.id

Ref: PurchaseItem.purchaseId > Purchase.id